# MPPTimetables

./: .gitignore  .gitmodules  CMakeLists.txt  Class.h  Constraint.h  Course.h  DistributionPenalty.h  DistributionRequired.h  Encoder.cc  Encoder.h  ILP.cpp  ILP.h  ILPExecuter.h  Instance.h  LICENSE  Lecture.h  Limits.h  LocalSearch.h  Makefile  MaxSAT.cc  MaxSAT.h  MaxSATFormula.cc  MaxSATFormula.h  MaxTypes.h  NoLimit.h  ParserPB.cc  ParserXML.h  ParserXMLTwo.h  ParserXMLTwoold.h  Perturbation.cpp  Perturbation.h  README.md  Room.h  Student.h  Subpart.h  Test.or  Torc.cc  Torc.h  Unavailability.h  WithLimit.h  (+5 more)
algorithms/: Alg_BLS.cc  Alg_BLS.h  Alg_LinearSU.cc  Alg_LinearSU.h  Alg_LinearSU_Clustering.cc  Alg_LinearSU_Clustering.h  Alg_LinearSU_Clustering_Resolve.cc  Alg_LinearSU_Clustering_Resolve.h  Alg_LinearSU_Mod.cc  Alg_LinearSU_Mod.h  Alg_MSU3.cc  Alg_MSU3.h  Alg_OBV.cc  Alg_OBV.h  Alg_OLL.cc  Alg_OLL.h  Alg_OLL_Mod.cc  Alg_OLL_Mod.h  Alg_PartMSU3.cc  Alg_PartMSU3.h  Alg_WBO.cc  Alg_WBO.h
clusterings/: Cluster.cc
cmake/: FindBoost.cmake  FindCplex.cmake  FindGurobi.cmake
data/: muni-fsps-spr17.xml  pu-cs-fal07.xml
data/Disruption/profiles/: profileInvalidRoom.p  profileModifyLectures.p  profileOverlap.p
data/Pertubation/profiles/: profile.p
data/Perturbation/profiles/: profile.p  profileInvalidRoom.p  profileInvalidTime.p  profileModifyEnrollments.p  profileModifyLectures.p
data/input/: bet-sum18.xml  tg-fal17.xml
data/input/IST/: IST-C1S1-2018-2019.xml  IST-C1S1-2018.xml  IST-C1S2-2017-2018.xml  IST-C1S2-2018.xml  IST-C2S1-2018-2019.xml  IST-C2S1-2018.xml  IST-C2S2-2017-2018.xml  IST-C2S2-2018.xml  IST-C3S1-2018-2019.xml  IST-C3S1-2018.xml  IST-C3S2-2017-2018.xml  IST-C3S2-2018.xml  IST-Tagus-2017-2018.xml  IST-Tagus-2018-2019.xml  ist.xml
data/input/ITC-2007/: comp01.xml  comp02.xml  comp03.xml  comp04.xml  comp05.xml  comp06.xml  comp07.xml  (+14 more)
data/output/: wbg-fal10.xml
encodings/: Enc_MTotalizer.cc  Enc_MTotalizer.h  Enc_Totalizer.cc  Enc_Totalizer.h
log/: seed.txt
papers/EPIA2019/: cite.bib  main.tex  model.tex
papers/JOSH/: main.tex
papers/PATAT/: cite.bib  main.tex
problem/: Class.h  ClassbyRoom.h  Cluster.h  ClusterClassesbyRoom.h  ClusterStudents.h  ClusterbyRoom.h  Constraint.h  ConstraintShort.h  Course.h  Curriculum.h  DistributionPenalty.h  DistributionRequired.h  Instance.h  Lecture.h  Limits.h  NoLimit.h  Room.h  Solution.h  Student.h  Subpart.h  Time.h  Unavailability.h  WithLimit.h  distribution.h
randomGenerator/: Perturbation.cpp  Perturbation.h
rapid/: rapidxml.hpp  rapidxml_print.hpp
solver/: BinaryModelGurobiExecuter.h  BinaryOnlyGurobiExecuter.h  CplexExecuter.h  CplexSimple.h  GRASP.cpp  GRASP.h  Gurobi1.h  GurobiAux.h  GurobiExecuter.h  GurobiSimple.h  GurobiSimple1.h  ILPExecuter.h  IntegerModelGurobiExecuter.h  IntegerTimeGurobiExecuter.h  LSDivided.h  LocalSearch.cpp  LocalSearch.h  LocalSearchMultiShot.h  LocalSearchMultiShotRoom.h  MixedCplexExecuter.h  MixedModelGurobiExecuter.h  OneVarGurobiExecuter.h  Search.h  StudentSectioning.h  TwoVarGurobiExecuter.h  roomLecture.h  roomLectureBool.h  roomLectureGRB.h
stats/: Stats.h
utils/: HardwareStats.h  Stats.h  StringUtil.h  TimeUtil.h
(+41 files in other folders)
